--- a/index.html
+++ b/index.html
@@ -27,15 +27,52 @@
     </style>
   </head>
   <body>
-    How many team members can I invite? You can invite up to 2 additional users
-    on the Free plan. There is no limit on team members for the Premium plan.
-    What is the maximum file upload size? No more than 2GB. All files in your
-    account must fit your allotted storage space. How do I reset my password?
-    Click “Forgot password” from the login page or “Change password” from your
-    profile page. A reset link will be emailed to you. Can I cancel my
-    subscription? Yes! Send us a message and we’ll process your request no
-    questions asked. Do you provide additional support? Chat and email support
-    is available 24/7. Phone lines are open during normal business hours.
+    <div class="cardWrapper">
+      <div class="illustration"></div>
+      <div class="faq">
+        <h2 class="title">FAQ</h2>
+
+        <div class="questionsContainer">
+          <details class="answer">
+            <summary class="question">
+              How many team members can I invite?
+            </summary>
+            You can invite up to 2 additional users on the Free plan. There is
+            no limit on team members for the Premium plan.
+          </details>
+          <hr />
+          <details class="answer">
+            <summary class="question">
+              What is the maximum file upload size?
+            </summary>
+            No more than 2GB. All files in your account must fit your allotted
+            storage space.
+          </details>
+          <hr />
+          <details class="answer">
+            <summary class="question">How do I reset my password?</summary>
+            Click “Forgot password” from the login page or “Change password”
+            from your profile page. A reset link will be emailed to you.
+          </details>
+          <hr />
+
+          <details class="answer">
+            <summary class="question">Can I cancel my subscription?</summary>
+            Yes! Send us a message and we’ll process your request no questions
+            asked.
+          </details>
+          <hr />
+          <details class="answer">
+            <summary class="question">
+              Do you provide additional support?
+            </summary>
+            Chat and email support is available 24/7. Phone lines are open
+            during normal business hours.
+          </details>
+          <hr />
+        </div>
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by
