--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
     <div class="cardWrapper">
       <div class="illustration"></div>
       <div class="faq">
-        <h2 class="title">FAQ</h2>
-
         <div class="questionsContainer">
+          <h2 class="title">FAQ</h2>
           <details class="answer">
             <summary class="question">
               How many team members can I invite?
@@ -78,7 +77,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Pierrick</a>.
     </div>
   </body>
 </html>
