--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
     </style>
   </head>
   <body>
+    <div class="container"></div>
     <div class="cardWrapper">
       <div class="illustration">
         <div class="decoration"></div>
         <div class="girl"></div>
         <div class="box"></div>
+        <div class="girlMobileShadow"></div>
+        <div class="girlMobile"></div>
       </div>
       <div class="faq">
         <div class="questionsContainer">
@@ -77,14 +80,17 @@
           <hr />
         </div>
       </div>
+      
     </div>
-
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Pierrick</a>.
     </div>
+    </div>
+
+
 
     <script>
       const answerElements = document.querySelectorAll(".answer");
