--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
+        margin-top: 3rem;
         font-size: 11px;
         text-align: center;
       }
@@ -27,7 +28,8 @@
     </style>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="illustrationOverflow"></div>
     <div class="cardWrapper">
       <div class="illustration">
         <div class="decoration"></div>
